29Aug05=======================================================================
1. try something else to resolve/prevent more of these spot dupes. It appears
that there is software out there chopping off variable amounts from the ends
of comment fields. This makes the task of detecting dupes that much harder.
10Aug05=======================================================================
1. trim dx spot duplicate length after normalisation
2. Do the same for announces
08Jul05=======================================================================
1. new CTY.DAT encorporated
27May05=======================================================================
1. change copyright in dbg message at startup.
25May05=======================================================================
1. Added a means to import a script of arbitrary commands to allow external
programs to do stuff.
23Mar05=======================================================================
1. fix (un)set/badspotter so that it only stores non-ssid calls.
2. mention action on talk and ann/full in help.
22Mar05=======================================================================
1. Fix ? so it works again.
2. Fix Aliases for sh/c so they are correct
3. Fix sh/connect for AGW ports and other niffnaffs.
22Mar05=======================================================================
1. fixed sh/c/node sh/c/a and sh/newc/n.
21Mar05=======================================================================
1. log AGW port on connection
2. merge in latest (2Mar2005) cty.dat 
3. fix command searching so it does not pick up false positives for commands
with / in them in directories that don't have that.
4. Important security change.
5. add missing input filter for WWV
16Mar05=======================================================================
1. make the correct correction to the DL entry in wpxloc.raw (left out the
'N' of 'North' in the latitude).